--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<link rel="stylesheet"  href="footwear.css">
+	<link rel="stylesheet"  href="shoes.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet"  href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 	<title>Footwear</title>
